# context-engine

./: .env.example  .gitignore  CLAUDE.md  Makefile  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_query_audit_metadata.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  logging.py
backend/app/db/: __init__.py  connection.py  models.py  query_logging.py
backend/app/embeddings/: __init__.py  provider.py
backend/app/generation/: __init__.py  generator.py  provider.py
backend/app/ingestion/: __init__.py  chunking.py  pipeline.py
backend/app/retrieval/: __init__.py  graph.py  keyword.py  merger.py  reranker.py  router.py  semantic.py  sql.py  structured.py  wiki.py
backend/app/schemas/: document.py  query.py
backend/app/scripts/: __init__.py  demo_local.py  seed_local.py
backend/app/tests/: conftest.py  test_chunking.py  test_classifier.py  test_demo_local.py  test_embeddings.py  test_generation.py  test_graph.py  test_health.py  test_hybrid_retrieval.py  test_ingestion_pipeline.py  test_keyword.py  test_merger.py  test_migrations.py  test_query_logging.py  test_reranker.py  test_router.py  test_schemas.py  test_seed_local.py  test_semantic.py  test_sql.py  test_verification.py  test_wiki.py
backend/app/verification/: __init__.py  confidence.py  verifier.py
docs/: ARCHITECTURE.md  CONVENTIONS.md  DECISIONS.md  PROGRESS.md  PROJECT_GUIDE.md
frontend/: README.md  eslint.config.js  (+4 more)
(+71 files in other folders)
