[tool.poetry]
name = "context-engine-backend"
version = "0.1.0"
description = "FastAPI backend for ContextEngine hybrid RAG."
authors = ["ContextEngine <context-engine@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
alembic = ">=1.14.0,<2.0.0"
asyncpg = ">=0.30.0,<1.0.0"
fastapi = ">=0.115.0,<1.0.0"
pgvector = ">=0.3.0,<1.0.0"
pydantic = ">=2.10.0,<3.0.0"
pydantic-settings = ">=2.6.0,<3.0.0"
sqlalchemy = { extras = ["asyncio"], version = ">=2.0.36,<3.0.0" }
uvicorn = { extras = ["standard"], version = ">=0.32.0,<1.0.0" }

[tool.poetry.group.dev.dependencies]
httpx = ">=0.27.0,<1.0.0"
mypy = ">=1.13.0,<2.0.0"
pytest = ">=8.3.0,<9.0.0"
pytest-asyncio = ">=0.24.0,<1.0.0"
ruff = ">=0.8.0,<1.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pgvector.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
